--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.release>17</maven.compiler.release>
+    <mockito-junit-jupiter.version>5.13.0</mockito-junit-jupiter.version>
   </properties>
 
   <dependencyManagement>
@@ -33,7 +34,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
-      <version>5.13.0</version>
+      <version>${mockito-junit-jupiter.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
